--- a/app/views/urls/show.html.erb
+++ b/app/views/urls/show.html.erb
@@ -1,6 +1,8 @@
 <p>
-  Original Url: <%= @url.original_url %>
+    Original Url:
+    <%= @url.original_url %>
 </p>
 <p>
-  Short Url: <%= link_to @url.short_url,@url.short_url%>
+    Short Url:
+    <%= link_to @url.short_url,@url.short_url%>
 </p>
